cloud/w10/temp/security-rbac-admission/gatekeeper/constraints/enforce-allowed-image-registries.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedImageRegistries
metadata:
  name: allow-approved-registries
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["demo"]
  parameters:
    registries:
      - ghcr.io/
      - docker.io/library/
