cloud/w10/temp/security-rbac-admission/gatekeeper/constraints/enforce-owner-label.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredOwnerLabel
metadata:
  name: require-owner-label
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["demo"]
